# airflow-ldap-auth-manager

./: .gitignore  README.md  ldap_auth_manager.py  pyproject.toml
src/airflow_ldap_auth_manager/: __init__.py  ldap_auth_manager.py
src/airflow_ldap_auth_manager/static/: style.css
src/airflow_ldap_auth_manager/templates/: ldap_login.html
templates/: ldap_login.html
